# SQL-DB-Creator-Example

./: .gitignore  README.md
sql_db_creator/: Cargo.toml
sql_db_creator/src/: creator.rs  creator_mysql.rs  creator_postgres_sql.rs  db.rs  dbs.rs  lib.rs  util.rs
sql_db_creator/src/creator/: mod.rs  mysql.rs  postgres_sql.rs
sql_db_creator/src/creator/db/: db.rs  dbs.rs  mod.rs
sql_db_creator/src/creator/util/: mod.rs
sql_db_creator/src/db/: db.rs  dbs.rs  mod.rs
sql_db_creator/src/sql/: creator_mysql.rs  creator_postgres_sql.rs  mod.rs  mysql.rs  postgres_sql.rs
sql_db_creator/src/sql/db/: db.rs  dbs.rs  mod.rs
sql_db_creator/src/sql_db_creator/: creator.rs  database.rs  mod.rs
sql_db_creator/src/sql_db_creator/sql/: mod.rs  temp.rs
sql_db_creator/src/util/: mod.rs
sql_db_creator_example/: Cargo.toml
sql_db_creator_example/src/: main.rs
sql_db_creator_example/src/db/countries/: geography.json  goverment.json
sql_db_creator_mysql_example/: Cargo.toml
sql_db_creator_mysql_example/src/: main.rs
sql_db_creator_mysql_example/src/db/countries/: geography.json  goverment.json
sql_db_creator_mysql_example/src/db/flowers/: infos.json  region.json
sql_db_creator_postgres_example/: Cargo.toml
sql_db_creator_postgres_example/src/: main.rs  secure.rs
sql_db_creator_postgres_example/src/db/countries/: geography.json  goverment.json
sql_db_creator_postgres_example/src/db/flowers/: infos.json  region.json
