[package]
name = "sql_db_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { git = "https://github.com/demurgos/sqlx.git", branch = "issue-1477", features = [ "postgres", "mysql", "migrate", "macros", "chrono", "runtime-async-std-rustls" ] }
actix-web = "4"
futures = "0.3"
